:arrow_up: migrate the bundled runtime to JBR 25.0.4.1 b610.67 (#4831)